# global_relocalization_kinematic_ICP

./: .gitignore  README.md  config.rviz  frames_2025-10-08_11.17.32.gv
src/global_drift_correction_pkg/: CMakeLists.txt  package.xml
src/global_drift_correction_pkg/include/global_drift_correction_pkg/: globalLocalize.hpp  utility.hpp
src/global_drift_correction_pkg/launch/: online_global_node.launch.py
src/global_drift_correction_pkg/src/: globalLocalize.cpp  localization_bridge.cpp  pointcloud_relay.cpp
